# RoverGUI

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yaml
backend/: Cargo.toml  pyproject.toml
backend/src/: fake_backend.rs  main.rs  utils.rs
backend/src/backend/: api.py  error.py
backend/src/backend/managers/: camera_manager.py
react-app/: README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
react-app/src/: App.css  App.jsx  App.test.tsx  App.ts  App.tsx  CameraGrid.css  CameraGrid.tsx  CameraToolbar.css  CameraToolbar.tsx  axiosInstance.js  cameras.test.ts  index.js  index.tsx  react-app-env.d.ts
react-app/src/components/: VideoStream.jsx  farts.VideoStream.jsx.farts
react-app/tests/: cameras.test.ts  cameras.test.tsx
src/: App.css  App.js
