[project]
name = "backend"
version = "0.1.0"
description = "A backend for the Rover GUI using Fast-api"
authors = [
    { name = "Tyler Roman", email = "tyler73750@gmail.com" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "fastapi>=0.111.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.6",
]

[tool.rye.scripts]
# see: https://rye.astral.sh/guide/pyproject/#toolryescripts
dev = { cmd = "fastapi dev --reload"}
run = { cmd = "fastapi run" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
